Per #5026 by @RiderOnTheStorm

--- a/foreword.tex
+++ b/foreword.tex
@@ -35,6 +35,7 @@
 
 	\item[] Тагир Гадельшин\begin{tiny} (201-119 гр.)\end{tiny}
 	\item[] Марат Гаджибутаев\begin{tiny} (201-018 гр.)\end{tiny}
+	\item[] Тимур Газизов\begin{tiny} (201-317 гр.)\end{tiny} %RiderOnTheStorm
 	\item[] Ильназ Гараев\begin{tiny} (201-113 гр.)\end{tiny}
 	\item[] Евгений Глушков\begin{tiny} (201-012 гр.)\end{tiny}
 	\item[] Иван Голованов\begin{tiny} (201-312 гр.)\end{tiny} %ivangolovanov; legendawes, legendawes1
