Per #5048 by @VanSokol

--- a/el-gamal.tex
+++ b/el-gamal.tex
@@ -232,7 +232,7 @@
 
 Рассмотрим возможные способы нахождения неизвестного числа $x$. Начнём с перебора различных значений $x$ из интервала $0<x<p-1$ и проверки равенства $y=g^{x} \mod p$. Число попыток в среднем равно $\frac{p}{2}$, при $p=2^{1024}$ это число равно $2^{1023}$, что на практике неосуществимо.
 
-Другой подход предложен советским математиком Гельфондом в 1962 году \index{алгоритм!Гельфонда} безотносительно к криптографии. Он состоит в следующем.
+\index{алгоритм!Гельфонда~---~Шенкса|(}Другой подход предложен советским математиком Гельфондом в 1962 году безотносительно к криптографии. Он состоит в следующем.
 Вычислим $S=\left\lceil\sqrt{p-1}\right\rceil $, где скобки означают наименьшее целое, которое не меньше $\sqrt{p-1} $.
 
 Представим искомое число $x$ в следующем виде:
@@ -268,10 +268,11 @@
 
 Легко проверить, что с помощью построенной таблицы мы проверили все возможные значения $x$. Максимальное число умножений равно $2S \approx 2\sqrt{p-1} =2\times 2^{512} $, что для практики очень велико. Тем самым проблему достаточной криптостойкости этой системы можно было бы считать решённой. Однако это неверно, так как числа $p-1$ являются составными. Если $p-1$ можно разложить на маленькие множители, то криптоаналитик может применить процедуру, подобную процедуре Гельфонда, по взаимно простым делителям $p-1$ и найти секрет. Пусть $p-1=st$. Тогда элемент $g^s$ образует подгруппу порядка $t$ и наоборот. Теперь, решая уравнение $y^s=(g^s)^a\mod p$, находим вычет $x=a\mod t$. Поступая аналогично, находим $x=b\mod s$ и по Китайской теореме об остатках находим $x$.
 
-Несколько позже подобный метод ускоренного решения уравнения~\ref{S} был предложен американским математиком Шенксом (\langen{Daniel Shanks}, \cite{Shanks:1971})\index{алгоритм!Шенкса}.
+Несколько позже подобный метод ускоренного решения уравнения~\ref{S} был предложен американским математиком Шенксом (\langen{Daniel Shanks}, \cite{Shanks:1971}). Оба алгоритма в литературе можно встретить под названиями: алгоритм Гельфонда, алгоритм Шенкса или алгоритм Гельфонда~---~Шенкса.
 
 Пусть $k = \lceil \log_2 p \rceil$ -- битовая длина числа $p$. Алгоритм Гельфонда имеет экспоненциальную сложность (число двоичных операций):
     \[ O\left(\sqrt{p}\right) = O\left(e^{\frac{1}{2} \frac{1}{\log_2 e} k}\right). \]
+\index{алгоритм!Гельфонда~---~Шенкса|)}
 
 Наилучшие из известных алгоритмов решения задачи дискретного логарифмирования имеют экспоненциальную сложность порядка
     \[ O\left(e^{\sqrt{k}}\right). \]
