--- a/foreword.tex
+++ b/foreword.tex
@@ -141,6 +141,7 @@
 	\item[] Айдар Фасхутдинов\begin{tiny} (201-114 гр.)\end{tiny} %aidarfaskh
 	\item[] Наталья Федотова\begin{tiny} (201-212 гр.)\end{tiny}
 	\item[] Данил Филиппов\begin{tiny} (201-115 гр.)\end{tiny}
+	\item[] Яков Фиронов\begin{tiny} (201-314 гр.)\end{tiny} %YakovFironov
 
 	\item[] Алексей Хацкевич\begin{tiny} (201-211 гр.)\end{tiny}
 
