--- a/foreword.tex
+++ b/foreword.tex
@@ -111,6 +111,7 @@
 	\item[] Роман Проскин\begin{tiny} (201-316 гр.)\end{tiny} %opomuc
 	\item[] Андрей Пунь\begin{tiny} (201-013 гр.)\end{tiny}
 
+	\item[] Дмитрий Радкевич\begin{tiny} (201-316 гр.)\end{tiny} %radkevichdmitriy
 	\item[] Артём Рудой\begin{tiny} (201-211 гр.)\end{tiny} %artemrudoj
 	\item[] Сергей Рудаков\begin{tiny} (201-219 гр.)\end{tiny} %Shytnichok
 
