Per #5237 by @grishasobol

--- a/foreword.tex
+++ b/foreword.tex
@@ -119,6 +119,7 @@
 	\item[] Евгения Сахно\begin{tiny} (201-317 гр.)\end{tiny} %EvgenyaSakhno
 	\item[] Иван Саюшев\begin{tiny} (201-112 гр.)\end{tiny}
 	\item[] Всеволод Сергеев\begin{tiny} (201-212 гр.)\end{tiny} %VsevolodSergeev
+	\item[] Григорий Соболь\begin{tiny} (201-316 гр.)\end{tiny} %grishasobol
 	\item[] Иван Соколов\begin{tiny} (201-314 гр.)\end{tiny} %vansokol
 	\item[] Илья Соломатин\begin{tiny} (201-211 гр.)\end{tiny}
 	\item[] Игорь Сорокин\begin{tiny} (201-112 гр.)\end{tiny}
