Per #5257 by @FRaKTT

--- a/foreword.tex
+++ b/foreword.tex
@@ -64,6 +64,7 @@
 	\item[] Ирина Камалова\begin{tiny} (201-115 гр.)\end{tiny}
 	\item[] Иван Киселёв\begin{tiny} (201-115 гр.)\end{tiny}
 	\item[] Константин Ковальков\begin{tiny} (201-015 гр.)\end{tiny}
+	\item[] Федор Константинов\begin{tiny} (201-312 гр.)\end{tiny} %FRaKTT
 	\item[] Анастасия Коробкина\begin{tiny} (201-312 гр.)\end{tiny} %korobkina
 	\item[] Илья Копцов\begin{tiny} (201-115 гр.)\end{tiny} %IlyaKoptsov
 	\item[] Андрей Кочетыгов\begin{tiny} (201-111 гр.)\end{tiny} %anko1774
