--- a/foreword.tex
+++ b/foreword.tex
@@ -147,6 +147,7 @@
 	\item[] Данил Филиппов\begin{tiny} (201-115 гр.)\end{tiny}
 	\item[] Яков Фиронов\begin{tiny} (201-314 гр.)\end{tiny} %YakovFironov
 
+	\item[] Никита Харичкин\begin{tiny} (201-315 гр.)\end{tiny} %NEKharichkin
 	\item[] Алексей Хацкевич\begin{tiny} (201-211 гр.)\end{tiny}
 
 	\item[] Александра Цветкова\begin{tiny} (201-216 гр.)\end{tiny}
