Per #5313 by @olegrok

--- a/foreword.tex
+++ b/foreword.tex
@@ -18,6 +18,7 @@
 	\item[] Руслан Агишев\begin{tiny} (201-314 гр.)\end{tiny} %agruslan
 
 	\item[] Алипаша Бабаев\begin{tiny} (201-311 гр.)\end{tiny} %alishnik
+	\item[] Олег Бабин\begin{tiny} (201-415 гр.)\end{tiny} %olegrok
 	\item[] Татьяна Бакланова\begin{tiny} (201-211 гр.)\end{tiny}
 	\item[] Дмитрий Банков\begin{tiny} (201-011 гр.)\end{tiny}
 	\item[] Александр Белов\begin{tiny} (201-214 гр.)\end{tiny}
