--- a/foreword.tex
+++ b/foreword.tex
@@ -65,6 +65,7 @@
 	\item[] Ирина Камалова\begin{tiny} (201-115 гр.)\end{tiny}
 	\item[] Иван Киселёв\begin{tiny} (201-115 гр.)\end{tiny}
 	\item[] Константин Ковальков\begin{tiny} (201-015 гр.)\end{tiny}
+	\item[] Николай Козырский\begin{tiny} (201-417 гр.)\end{tiny} %NikolayKozyrskiy
 	\item[] Федор Константинов\begin{tiny} (201-312 гр.)\end{tiny} %FRaKTT
 	\item[] Анастасия Коробкина\begin{tiny} (201-312 гр.)\end{tiny} %korobkina
 	\item[] Илья Копцов\begin{tiny} (201-115 гр.)\end{tiny} %IlyaKoptsov
@@ -139,7 +140,7 @@
 	\item[] Татьяна Тюпина\begin{tiny} (201-116 гр.)\end{tiny}
 
 	\item[] Сергей Угрюмов\begin{tiny} (201-119 гр.)\end{tiny}
-	\item[] Илья Улитин\begin{tiny} (201-417 гр.)\end{tiny}
+	\item[] Илья Улитин\begin{tiny} (201-417 гр.)\end{tiny} %Mobilnik
 
 	\item[] Марсель Файзуллин\begin{tiny} (201-114 гр.)\end{tiny}
 	\item[] Нияз Фазлыев\begin{tiny} (201-114 гр.)\end{tiny} %NiyazFazliev
@@ -149,6 +150,7 @@
 	\item[] Яков Фиронов\begin{tiny} (201-314 гр.)\end{tiny} %YakovFironov
 
 	\item[] Никита Харичкин\begin{tiny} (201-315 гр.)\end{tiny} %NEKharichkin
+	\item[] Тарас Хахулин\begin{tiny} (201-417 гр.)\end{tiny} %Khakhulin
 	\item[] Алексей Хацкевич\begin{tiny} (201-211 гр.)\end{tiny}
 
 	\item[] Александра Цветкова\begin{tiny} (201-216 гр.)\end{tiny}
