--- a/Information Security.tex
+++ b/Information Security.tex
@@ -143,7 +143,7 @@
 
 Статистические исследования баз паролей показывают, что наиболее часто используются буквы <<a>>, <<e>>, <<o>>, <<r>> и цифра <<1>>.
 
-NIST использует следующие рекомендации для оценки энтропии паролей\index{энтропия!пароля}, создаваемых людьми.
+NIST (National Institute of Standards and Technology) использует следующие рекомендации для оценки энтропии паролей\index{энтропия!пароля}, создаваемых людьми.
 \begin{enumerate}
     \item Энтропия первого символа $H(s_1) = 4$ бит/символ.
     \item Энтропия со 2-го по 8-й символы $H(s_{i}) = 2$ бит/символ, $2 \leq i \leq 8$.
