Add @AleksandrParamonov to foreword

--- a/foreword.tex
+++ b/foreword.tex
@@ -110,6 +110,7 @@
 	\item[] Александр Ометов\begin{tiny} (201-113 гр.)\end{tiny} %Ozzmorn
 	\item[] Даниил Охлопков\begin{tiny} (201-311 гр.)\end{tiny}
 
+	\item[] Александр Парамонов\begin{tiny} (201-416 гр.)\end{tiny} %AleksandrParamonov
 	\item[] Дмитрий Паршин\begin{tiny} (201-313 гр.)\end{tiny} %dmitryparshin
 	\item[] Роман Проскин\begin{tiny} (201-316 гр.)\end{tiny} %opomuc
 	\item[] Андрей Пунь\begin{tiny} (201-013 гр.)\end{tiny}
