Update quantum_protocols.tex ":" -> "."
Элементы списка - предложения, замена двоеточия на точку.

--- a/quantum_protocols.tex
+++ b/quantum_protocols.tex
@@ -117,7 +117,7 @@
 
 Рассмотрим случай, когда Ева вмешалась в процесс передачи информации между Алисой и Бобом и отправляет Бобу уже свои фотоны, но не имеет возможности изменять информацию, которой Алиса и Боб обмениваются по классическому каналу связи. Как и прежде, Боб отправляет Алисе выбранные базисы поляризации (значения $B$), а Алиса указывает, какие из них совпали с выбранными ею значениями $A$.
 
-Но теперь для того чтобы Боб получил корректное значение $X_{B2}$ ($X_{B2} = X_A$), должны быть выполнены все следующие условия для каждого фотона:
+Но теперь для того чтобы Боб получил корректное значение $X_{B2}$ ($X_{B2} = X_A$), должны быть выполнены все следующие условия для каждого фотона.
 
 \begin{itemize}
 	\item Ева должна угадать базис поляризации Алисы ($E = A$).
