Исправление обозначений единиц измерения количества информации

--- a/double_and_triple_ciphering.tex
+++ b/double_and_triple_ciphering.tex
@@ -39,7 +39,7 @@
     \[ T = 2 \cdot 2^{56} T_E + 2^{56} T_{=} \approx 2^{57} T_E \]
 и памяти $M = 56 \cdot 2^{56} \approx 2^{62}$ бит ($\approx 504$ Пбайт), учитывая прямой доступ по значению к возможным ключам. При нахождении соответствия берётся другая пара (открытый текст, шифртекст) и проверяется равенство для определения, являются ли ключи правильными или нет.
 
-По отношению к CCA и CPA криптостойкость 2DES\index{шифр!2DES} эквивалентна обычному DES\index{шифр!DES} с использованием 26 ГиБ ($\approx 134$ Мбайт) памяти.
+По отношению к CCA и CPA криптостойкость 2DES\index{шифр!2DES} эквивалентна обычному DES\index{шифр!DES} с использованием 26 ГиБ памяти.
 
 \subsubsection{Атака на тройное шифрование}
 
