--- a/wide-mouth_frog.tex
+++ b/wide-mouth_frog.tex
@@ -17,7 +17,7 @@
 
 По окончании протокола у Алисы и Боба есть общий сеансовый ключ $K$.
 
-У данного протокола множество недостатков.
+У данного протокола множество недостатков:
 
 \begin{itemize}
 	\item Генератором ключа является инициирующий абонент. Если предположить, что Боб -- это сервер, предоставляющий некоторый сервис, а Алиса -- это тонкий клиент, запрашивающий данный сервис, получается, что задача генерации надёжного сессионного ключа взваливается на плечи абонента с наименьшими мощностями.
