--- a/three-pass_protocols.tex
+++ b/three-pass_protocols.tex
@@ -15,7 +15,7 @@
 	\end{align*}
 \end{itemize}
 
-Протокол состоит из трёх шагов (отсюда и название).
+Протокол состоит из трёх шагов (отсюда и название):
 \begin{enumerate}
     \item Алиса создаёт новый секретный сеансовый ключ $K_S$, шифрует его с помощью своего ключа $K_A$ и посылает сообщение Бобу:
         \[ Alice \rightarrow ~ E_A \left( K_S \right) ~ \rightarrow Bob. \]
