--- a/Information Security.tex
+++ b/Information Security.tex
@@ -182,10 +182,10 @@ NIST (Национальный институт стандартов и техн
 \example
 Оценим общее количество существующих паролей. Население Земли -- 7 млрд. Предположим, что всё население использует компьютеры и Интернет, и у каждого человека по 10 паролей. Общее количество существующих паролей -- $7 \cdot 10^{10} \approx 2^{36}$.
 
-Имея доступ к наиболее массовым интернет-сервисам с количеством пользователей десятки и сотни миллионов, в которых пароли часто хранятся в открытом виде из-за необходимости обновления ПО и, в частности, выполнения аутентификации, мы:
+В современных массовых интернет-сервисах с десятками и сотнями миллионов пользователей пароли часто хранятся в открытом виде, чтобы сохранять возможность обновлять ПО и выполнять аутентификацию. Доступ к такому сервису позволяет:
 \begin{enumerate}
-	\item имеем базу паролей, покрывающую существенную часть пользователей; 
-	\item можем статистически построить правила генерирования паролей.
+	\item иметь базу паролей, покрывающую существенную часть пользователей;  
+	\item иметь возможность статистически построить правила генерирования паролей.
 \end{enumerate}
 
 Даже если пароль хранится в защищённом виде, то при вводе пароль, как правило, в открытом виде пересылается по Интернету, и все преобразования пароля для аутентификации осуществляет интернет-сервис, а не веб-браузер. Следовательно, интернет-сервис имеет доступ к исходному паролю.
