--- a/polyalphabetic_cipher_cryptanalysis.tex
+++ b/polyalphabetic_cipher_cryptanalysis.tex
@@ -103,8 +103,9 @@
 
 Метод индекса совпадений был описан Уильямом Фредериком Фридманом в 1922 году (\langen{William Frederick Friedman}, 1891--1969, \cite{Friedman:1922}). При применении метода индекса совпадений подсчитывают число появлений букв в случайной последовательности
     \[ \mathbf{X} = (X_1 ,X_2 , \ldots , X_L ) \]
-и вычисляют вероятность того, что два случайных элемента этой последовательности совпадают. Эта величина называется \emph{индексом совпадений} и обозначается $I_{c}(\mathbf{x}),$ где
+и вычисляют вероятность того, что два случайных элемента этой последовательности совпадают. Эта величина называется \emph{индексом совпадений} и обозначается $I_{c}(\mathbf{x}),$ 
     \[ I_{c} (\mathbf{x}) = \frac{{\sum\limits_{i = 1}^A {f_i (f_i  - 1)} }} {{L(L - 1)}}, \]
+    где
 $f_{i}$ -- число появлений буквы $i$ в последовательности $\mathbf{x}$, $A$ -- число букв в алфавите.
 
 Значение этого индекса используется в криптоанализе полиалфавитных шифров для приближённого определения периода по формуле:
