--- a/perfect_secure_systems.tex
+++ b/perfect_secure_systems.tex
@@ -148,7 +148,7 @@ P(c = a) = P(m \oplus k = a) = \sum_{m} P(m) P(m \oplus k = a | m) = \\
 так как ключ и открытый текст являются независимыми случайными величинами. Итого:
     \[ P(c=b | m=a) = \frac{1}{2^N}. \]
 
-Подстановка правой части этой формулы в формулу для совместного распределения даёт
+Подстановка правой части этой формулы в формулу для совместного распределения даёт: 
     \[ P(m=a,c=b)=P(m=a)\frac{1}{2^N}, \]
 что доказывает независимость шифртекстов и открытых текстов в этой системе. По доказанному выше, количество информации в шифртексте относительно открытого текста равно нулю. Это значит, что рассмотренная криптосистема Вернама обладает совершенной секретностью (криптостойкостью) при условии, что для каждого $N$-блока (сообщения) генерируется случайный (одноразовый) $N$-ключ.
 
