--- a/os_access_controls.tex
+++ b/os_access_controls.tex
@@ -22,13 +22,13 @@
     \item системный (System Integrity, \texttt{0x4000}).
 \end{itemize}
 
-Дополнительно объекты имеют три атрибута, которые, если они установлены, запрещают доступ субъектов с более низким уровнем доступа к ним: cубъекты с более низким уровнем доступа не могут:
+Дополнительно объекты имеют три атрибута, которые, если они установлены, запрещают доступ субъектов с более низким уровнем доступа к ним: cубъекты с более низким уровнем доступа не могут выполнять следующие действия по отношению к объектам с более высоким уровнем доступа:
 \begin{itemize}
     \item читать (\langen{no read-up});
     \item изменять (\langen{no write-up});
     \item исполнять (\langen{no execute-up}).
 \end{itemize}
-объекты с более высоким уровнем доступа. Для всех объектов по умолчанию установлен атрибут запрета записи объектов с более высоким уровнем доступа, чем имеет субъект (no write-up).
+Для всех объектов по умолчанию установлен атрибут запрета записи объектов с более высоким уровнем доступа, чем имеет субъект (no write-up).
 
 Субъекты имеют два атрибута:
 \begin{itemize}
