--- a/os_access_controls.tex
+++ b/os_access_controls.tex
@@ -30,12 +30,11 @@
 \end{itemize}
 объекты с более высоким уровнем доступа. Для всех объектов по умолчанию установлен атрибут запрета записи объектов с более высоким уровнем доступа, чем имеет субъект (no write-up).
 
-Субъекты имеют два атрибута:
+Субъекты имеют два атрибута по умолчанию:
 \begin{itemize}
     \item запрет записи объектов с более высоким уровнем доступа, чем у субъекта (no write-up, эквивалентно аналогичному атрибуту объекта);
     \item установка уровня доступа созданного процесса-потомка как минимума от уровня доступа родительского процесса (субъекта) и исполняемого файла (объекта файловой системы).
 \end{itemize}
-Оба атрибута установлены по умолчанию.
 
 Все пользовательские данные и процессы по умолчанию имеют средний уровень доступа, а системные файлы -- системный. Например, если в Internet Explorer, который в защищённом (\langen{protected}) режиме запускается с низким уровнем доступа, обнаружится уязвимость, злоумышленник не будет иметь возможности изменить системные данные на диске, даже если браузер запущен администратором.
 
