--- a/monoalphabetic_ciphers.tex
+++ b/monoalphabetic_ciphers.tex
@@ -47,7 +47,7 @@
 
 \subsection{Аффинный шифр}\label{section-affine-cipher}\index{шифр!афинный}
 
-Аддитивный шифр является частным случаем \emph{аффинного шифра}. Правило шифрования сообщения имеет вид
+Аддитивный шифр является частным случаем \emph{аффинного шифра}. Правило шифрования сообщения имеет вид:
     \[ y = a x + b \mod n. \]
 Здесь производится умножение номера символа $x$ из алфавита, $x\in \set\{ 0, 1, 2, \dots, N \leq n-1 \}$, на заданное целое число $a$ и сложение с числом $b$ по модулю целого числа $n$. Ключом является $K = (a, b)$.
 
