--- a/aes_math.tex
+++ b/aes_math.tex
@@ -13,7 +13,7 @@
 Далее байт трактуется как элемент конечного поля $\GF{2^8}$, заданного неприводимым многочленом, например
     \[ m(x) = x^{8}+x^{4}+x^{3}+x +1. \]
 
-Произведение многочленов $a(x)$ и $b(x)$ по модулю многочлена $m(x)$ записывают как
+Произведение многочленов $a(x)$ и $b(x)$ по модулю многочлена $m(x)$ записывают как:
     \[ c(x) = a(x) b(x) \mod m(x). \]
 Остаток $c(x)$ представляет собой многочлен степени 7 или меньше. Его коэффициенты $(c_{7}, c_{6}, c_{5}, c_{4}, c_{3}, c_{2}, c_{1}, c_{0})$ образуют байт $c$, который и называется произведением байтов $a$ и $b$.
 
