--- a/aes_math.tex
+++ b/aes_math.tex
@@ -25,7 +25,7 @@
     \[ a b = 1 \mod m(x). \]
 Обратный байт обозначается $b = a^{-1}$.
 
-Для байта $a$, представленного многочленом $a(x)$, нахождение обратного байта $a^{-1}$ сводится к решению уравнения
+Для байта $a$, представленного многочленом $a(x)$, нахождение обратного байта $a^{-1}$ сводится к решению уравнения:
     \[ m(x) d(x) + b(x) a(x) = 1. \]
 Если такое решение найдено, то многочлен $b(x) \mod m(x)$ является представлением обратного байта $a^{-1}$. Обратный элемент (байт) может быть найден с помощью расширенного алгоритма Евклида для многочленов.
 
