--- a/aes_math.tex
+++ b/aes_math.tex
@@ -45,7 +45,7 @@
 \exampleend
 
 \example
-Выполним в поле $\GF{2^8}$, заданном неприводимым многочленом
+Выполним в поле $\GF{2^8}$, заданном неприводимым многочленом:
     \[ m(x) = x^8 + x^4 + x^3 + x + 1 \]
 (из алгоритма AES), операции с байтами: $\mathrm{'FA'} \cdot \mathrm{'A9'} + \mathrm{'E0'}$, где
     \[ FA = 11111010, ~ A9 = 10101001, ~ E0 = 11100000, \]
