--- a/unicity_distance.tex
+++ b/unicity_distance.tex
@@ -6,7 +6,7 @@
 
 В подавляющем большинстве криптосистем размер ключа много меньше размера открытого текста, который нужно передать. Попробуем оценить теоретическую надёжность подобных систем, исходя из статистических теоретико-информационных соображений.
 
-Если длина ключа может быть много меньше длины открытого текста, то это означает, что энтропия ключа\index{энтропия!ключа} может быть много меньше энтропии открытого текста\index{энтропия!открытого текста}: $H(K) \ll H(M)$. Для таких ситуаций важным понятием является \emph{расстояние единственности}\index{расстояние единственности}, впервые предложенное в работах Клода Шеннона~\cite{Golomb:2002, Schneier:2011}.
+Если длина ключа может быть много меньше длины открытого текста, то это означает, что энтропия ключа\index{энтропия!ключа} может быть много меньше энтропии открытого текста\index{энтропия!открытого текста}: $H(K) \ll H(M)$. Для таких ситуаций важным понятием является \emph{расстояние единственности}\index{расстояние единственности}, впервые введенное в работах Клода Шеннона~\cite{Golomb:2002, Schneier:2011}.
 
 \begin{definition}\label{definition:unicity_distance}
 \emph{Расстоянием единственности}\index{расстояние единственности} называется количество символов шифртекста, которое необходимо для однозначного восстановления открытого текста.
