--- a/chinese_remainder_theorem.tex
+++ b/chinese_remainder_theorem.tex
@@ -44,7 +44,7 @@
 \subsection{Решение систем линейных уравнений}
 
 \example
-Решим, для примера, систему линейных уравнений. Применим CRT и а) для разложения одного уравнения по составному модулю на систему по взаимно простым модулям, и б) для нахождения конечного решения системы уравнений:
+Решим в качестве примера систему линейных уравнений. Применим CRT и а) для разложения одного уравнения по составному модулю на систему по взаимно простым модулям, и б) для нахождения конечного решения системы уравнений:
 \[
     \begin{cases}
         9 x \equiv 8 \mod 11, \\
