--- a/coincide-index_method.tex
+++ b/coincide-index_method.tex
@@ -91,5 +91,5 @@ I(\mathcal{P}_1, \mathcal{P}_2, \ldots, \mathcal{P}_m ) = \\
 Первая сумма содержит $m$ слагаемых, вторая -- $ \frac{m(m-1)}{2}$ слагаемых. Полагая
     \[ k_{p_1} = k_{p_2} = \dots = k_{p_m} = k_p, \]
     \[ k_{p_i p_j } = k_r = \frac{1}{A}, ~ i \ne j, \]
-получим после несложных выкладок
+получим после несложных выкладок:
     \[ m = \frac{k_p  - k_r}{I - k_r  + \frac{k_p  - I}{L}}. \]
