--- a/crypto-random.tex
+++ b/crypto-random.tex
@@ -1,7 +1,7 @@
 \section[КСГПСЧ]{Криптографически стойкие генераторы псевдослучайных чисел}\label{section-crypto-random}\index{генератор!криптографически-стойкий}
 \selectlanguage{russian}
 
-Итак, просто генератором псевдослучайных чисел мы называем функцию $g$ вида
+Итак, просто генератором псевдослучайных чисел мы называем функцию $g$ вида:
 	\[g: \left\{0, 1\right\}^{n} \to \left\{0, 1\right\}^{q\left(n\right)},\]
 вычислимую за полиномиальное время, результатом работы которой является последовательность чисел, обладающая свойствами случайной.
 
