--- a/crypto-random.tex
+++ b/crypto-random.tex
@@ -15,7 +15,7 @@
 
 То есть, если мы решим увеличить размер внутреннего состояния для защиты от криптоаналитика, это приведёт не более чем к линейному росту затрат последнего на необходимые вычисления (сравните это с экспоненциальным ростом затрат криптоаналитика при увеличении размера ключа для блочных шифров). Поэтому для использования в криптографии к генераторам псевдослучайных чисел предъявляются дополнительные требования.
 
-\emph{Криптографически стойким генератором псевдослучайных чисел} будем называть функцию $g$ вида
+\emph{Криптографически стойким генератором псевдослучайных чисел} будем называть функцию $g$ вида:
 	\[g: \left\{0, 1\right\}^{n} \to \left\{0, 1\right\}^{q\left(n\right)},\] 
 вычислимую за полиномиальное время, результатом работы которой является последовательность чисел, удовлетворяющая тесту на следующий бит: не должно существовать полиномиального алгоритма, который по $k$ битам последовательности будет предсказывать следующий с вероятностью более $1/2$.
 
