--- a/public-key.tex
+++ b/public-key.tex
@@ -20,7 +20,7 @@
 
 Для того чтобы быстро вычислить обратную функцию
 	\[ m = f^{-1} \left( c \right) = \sqrt[e]{c} \mod n, \]
-её можно представить в виде
+её можно представить в виде:
 	\[ m = c^{d} \mod n,\]
 где
 	\[ d = e^{-1} \mod \varphi \left( n \right). \]
