--- a/three-pass_protocols.tex
+++ b/three-pass_protocols.tex
@@ -31,7 +31,7 @@
 
 В результате стороны получают общий секретный ключ $K_S$.
 
-Общим недостатком всех подобных протоколов является отсутствие аутентификации сторон. Конечно, в случае пассивного криптоаналитика это не требуется, но в реальной жизни всё-таки нужно рассматривать все возможные модели (в том числе активного криптоаналитика) и использовать такие протоколы, которые предполагают взаимную аутентификацию сторон.
+Общим недостатком всех подобных протоколов является отсутствие аутентификации сторон. Конечно, в случае пассивного криптоаналитика это не требуется, но в реальной жизни всё-таки нужно рассматривать все возможные модели (в том числе, активного криптоаналитика) и использовать такие протоколы, которые предполагают взаимную аутентификацию сторон.
 
 \subsection{Тривиальный вариант}
 
