--- a/composite_ciphers.tex
+++ b/composite_ciphers.tex
@@ -1,6 +1,4 @@
 \subsubsection{Композиционные шифры}
 \selectlanguage{russian}
 
-Почти все современные шифры являются \emph{композиционными}~\cite{AlZKCh:2001}. В них применяются несколько различных методов шифрования к одному и тому же открытому тексту. Другое их название -- \emph{составные шифры}. Впервые понятие <<составные шифры>> было введено в работе Клода Шеннона (\langen{Claude Elwood Shannon},~\cite{Shannon:1949:CTS}).
-
-В современных криптосистемах шифры замены и перестановок используются многократно, образуя составные (композиционные) шифры.
+Почти все современные шифры являются \emph{композиционными}~\cite{AlZKCh:2001}. Также распространено название \emph{составные шифры}, впервые введенное в работе Клода Шеннона (\langen{Claude Elwood Shannon},~\cite{Shannon:1949:CTS}). В них применяются несколько различных методов шифрования к одному и тому же открытому тексту. В современных криптосистемах используется,например, композиция шифра замены и шифра перестановок, применяемая многократно.
