--- a/CAs.tex
+++ b/CAs.tex
@@ -4,7 +4,7 @@
 Проблему аутентификации и распределения сеансовых симметричных ключей шифрования в Интернете, а также в больших локальных и виртуальных сетях решают с помощью построения иерархии открытых ключей криптосистем с открытым ключом.
 
 \begin{enumerate}
-    \item Существует удостоверяющий центр (УЦ) верхнего уровня\index{удостоверяющий центр!верхнего уровня}, корневой УЦ\index{удостоверяющий центр!корневой} (\langen{root certificate authority, root CA}), обладающий парой из закрытого и открытого ключей. Открытый ключ УЦ верхнего уровня распространяется среди всех пользователей, причём все пользователи \emph{доверяют УЦ}. Это означает, что:
+    \item Существует удостоверяющий (корневой) центр  (УЦ) верхнего уровня\index{удостоверяющий центр!верхнего уровня} (\langen{root certificate authority, root CA}), обладающий парой из закрытого и открытого ключей. Открытый ключ УЦ верхнего уровня распространяется среди всех пользователей, причём все пользователи \emph{доверяют УЦ}. Это означает, что:
         \begin{itemize}
             \item УЦ -- <<хороший>>, то есть обеспечивает надёжное хранение закрытого ключа, не пытается фальсифицировать и скомпрометировать свои ключи;
             \item имеющийся у пользователей открытый ключ УЦ действительно принадлежит УЦ.
