--- a/wide-mouth_frog.tex
+++ b/wide-mouth_frog.tex
@@ -42,7 +42,7 @@
 
 \begin{itemize}
 	\item Каждый из абонентов будет уверен, что закончился протокол создания нового сеансового ключа, что второй абонент успешно аутентифицировал себя перед доверенным центром. И что для установления следующего сеанса связи будет использоваться новый (на самом деле -- старый) ключ $K$.
-	\item После того, как пройдёт время, нужное злоумышленнику Еве для взлома сеансового ключа $K$, Ева сможет и читать всю переписку, проходящую между абонентами, и успешно выдавать себя за обоих из абонентов.
+	\item После того, как пройдёт время, нужное злоумышленнику Еве для взлома сеансового ключа $K$, она сможет и читать всю переписку, проходящую между абонентами, и успешно выдавать себя за обоих из абонентов.
 \end{itemize}
 
 Вторая атака 1997 года Гэвина Лоу (\langen{Gavin Lowe}, \cite{Lowe:1997}) проще в реализации. В результате этой атаки Боб уверен, что Алиса аутентифицировала себя перед доверенным центром и хочет начать второй сеанс общения. Что, конечно, не является правдой, так как второй сеанс инициирован злоумышленником.
