--- a/CAs.tex
+++ b/CAs.tex
@@ -9,8 +9,12 @@
             \item УЦ -- <<хороший>>, то есть обеспечивает надёжное хранение закрытого ключа, не пытается фальсифицировать и скомпрометировать свои ключи;
             \item имеющийся у пользователей открытый ключ УЦ действительно принадлежит УЦ.
         \end{itemize}
-        В массовых информационных и интернет-системах открытые ключи многих корневых УЦ встроены в дистрибутивы и пакеты обновлений ПО. Доверие пользователей неявно проявляется в их уверенности в том, что открытые ключи корневых УЦ, включённые в ПО, не фальсифицированы и не скомпрометированы. \emph{Де-факто пользователи доверяют а) распространителям ПО и обновлений, б) корневому УЦ.}\index{доверие}
-
+        В массовых информационных и интернет-системах открытые ключи многих корневых УЦ встроены в дистрибутивы и пакеты обновлений ПО. Доверие пользователей неявно проявляется в их уверенности в том, что открытые ключи корневых УЦ, включённые в ПО, не фальсифицированы и не скомпрометированы. \emph{Де-факто пользователи доверяют 
+	\begin{itemize}
+		\item распространителям ПО и обновлений, 
+		\item корневому УЦ.\index{доверие}.
+	\end{itemize}
+}
         Назначение УЦ верхнего уровня -- проверка принадлежности и подписание открытых ключей удостоверяющих центров второго уровня (\langen{certificate authority, certification authority, CA}), а также организаций и сервисов. УЦ подписывает своим закрытым ключом следующее сообщение:
         \begin{itemize}
             \item название и URI УЦ нижележащего уровня или организации/сервиса;
