--- a/hills_cipher.tex
+++ b/hills_cipher.tex
@@ -121,7 +121,7 @@
 \] \[
     = \left( \begin{array}{cc} 3 & -2 \\ -2 & -1 \end{array} \right) \mod 26.
 \]
-Найденный секретный ключ
+Найденный секретный ключ:
 \[
     \left( \begin{array}{cc} \text{D} & \text{Y} \\ \text{Y} & \text{Z} \end{array} \right).
 \]
