Исправлено ошибочное утрверждение
https://habrahabr.ru/company/intel/blog/237607/
Закон Мура не является законом о производительности и говорит о том, что
экономически целесообразно увеличивать количество транзисторов на
единицу площади каждые два года

--- a/The_minimum_key_lengths.tex
+++ b/The_minimum_key_lengths.tex
@@ -8,7 +8,7 @@
     \item вычислительная сеть состоит из $n = 10^3 \approx 2^{10}$ узлов;
     \item в каждом узле имеется $C = 16 = 2^4$ ядер процессора;
     \item нужно обеспечить защиту данных на $Y = 100$ лет, то есть на $S \approx 2^{32}$ с;
-    \item выполняется закон Мура об удвоении вычислительной производительности на единицу стоимости каждые 2 года, то есть производительность вырастет в $M = 2^{Y/2} \approx 2^{50}$ раз.
+    \item выполняется наивное следствие закона Мура об увеличении числа транзисторов на единицу площади каждые 2 года, а именно, что производительность также удваивается каждые два года. Суммарный прирост за 100 лет в $M = 2^{Y/2} \approx 2^{50}$ раз.
 \end{itemize}
 
 Число попыток $N$ при переборе примерно равно
