--- a/groups_of_ec_points_over_finite_fields.tex
+++ b/groups_of_ec_points_over_finite_fields.tex
@@ -96,7 +96,7 @@
 Возможна также более компактная запись:
     \[ E: ~ y^2 = x^3 + a x + b \mod p.\]
 
-Точкой эллиптической кривой является пара чисел
+Точкой эллиптической кривой является пара чисел:
     \[ (x; y): x, y \in \Z_p, \]
 удовлетворяющая уравнению эллиптической кривой, определённой над конечным полем $\Z_p$.
 
