--- a/blockchain.tex
+++ b/blockchain.tex
@@ -67,7 +67,7 @@
 	\item собрать из пула незафиксированных транзакций те, которые поместятся в 1 блок (1 мегабайт для сети Bitcoin\index{Bitcoin}) и имеют максимальную комиссию (решить задачу о рюкзаке\index{задача!о рюкзаке});
 	\item добавить в блок информацию о предыдущем блоке;
 	\item добавить в блок информацию о себе (как об авторе блока, кому начислять комиссии и бонусы за блок);
-	\item установить $r$ в некоторое значение, например, $0$;
+	\item установить $r$ в некоторое значение, например $0$;
 	\item выполнять в цикле:
 	\begin{itemize}
 		\item обновить значение $r := r + 1$;
